--- a/scss/pre.scss
+++ b/scss/pre.scss
@@ -5,7 +5,15 @@ $card-bg: rgba(255, 255, 255, 0.98);
 $oppia-lighter: #c1e552;
 $oppia-light: #9aca3c;
 $oppia-mid: #689e3a;
-$brand-primary: $oppia-mid !default;
+$oppia-dark: #628817;
+$brand-primary: $oppia-mid;
+
+$theme-colors: (
+    "primary": $oppia-mid
+);
+
+$oppia-shadow: rgba(154, 202, 60, 0.25);
+$card-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0, 45, 0, 0.2);
 
 $breadcrumb: #ececec;
 $breadcrumb-even: #e3e3e3;
